--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.servlet.context-path=/shared_shop_nobee
+server.servlet.context-path=/shared_shop_nonbee
 server.port=55000
 spring.thymeleaf.cache=false
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.url=jdbc:oracle:thin:@192.168.100.23:1521:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@192.168.100.220
 spring.datasource.username=shared_shop_user
 spring.datasource.password=systemsss
